# lftg

./: .editorconfig  .env.local  Cargo.toml  README.md
crates/lftg-cli/: Cargo.toml
crates/lftg-cli/src/: app.rs  chapter.rs  config.rs  error.rs  extract.rs  fairy_tale.rs  main.rs  ollama.rs  story.rs
