[package]
name = "lftg-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.31", default-features = false, features = [
    "derive",
    "env",
    "help",
    "std"
] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json"
] }
serde = { version = "1.0.218", default-features = false, features = [
    "derive"
] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", default-features = false, features = [
    "full"
] }
