[package]
name = "lftg-cli"
version.workspace = true
edition.workspace = true

[dependencies]
async-recursion = "1.1"
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "env",
    "help",
    "std"
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json"
] }
serde = { version = "1.0", default-features = false, features = [
    "derive"
] }
serde_json = "1.0"
tokio = { version = "1.44", default-features = false, features = [
    "full"
] }
